Update social metadata and CORS settings

--- a/Mathenique-main/index.html
+++ b/Mathenique-main/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/formula.png" />
-    <title>Mathenique</title>
-    <meta name="description" content="Math Quiz Game App" />
-    <meta name="author" content="kilohertzel" />
+    <title>Mathenique - Gamified Math Learning</title>
+    <meta name="description" content="Challenge yourself with Mathenique! Solve Algebra, Geometry, and Trigonometry problems against the clock. Compete on global leaderboards and track your progress." />
+    <meta name="author" content="Mathenique" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Mathenique" />
-    <meta property="og:description" content="Math Quiz Game App" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://drive.google.com/file/d/1nEE5RqDUfJbgW9DGNqVHxLaET0t3GTn3/view?usp=sharing" />
+    <meta property="og:url" content="https://mathenique-frontend.onrender.com/" />
+    <meta property="og:title" content="Mathenique - Gamified Math Learning" />
+    <meta property="og:description" content="Challenge yourself with Mathenique! Solve Algebra, Geometry, and Trigonometry problems against the clock. Compete on global leaderboards." />
+    <meta property="og:image" content="https://mathenique-frontend.onrender.com/preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mathenique-frontend.onrender.com/" />
+    <meta property="twitter:title" content="Mathenique - Gamified Math Learning" />
+    <meta property="twitter:description" content="Challenge yourself with Mathenique! Solve Algebra, Geometry, and Trigonometry problems against the clock." />
+    <meta property="twitter:image" content="https://mathenique-frontend.onrender.com/preview.png" />
   </head>
 
   <body>
